--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -16,24 +16,25 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Liên kết nhanh</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Trang chủ</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Giới thiệu</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Các khóa học</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Liên hệ</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a routerLink="/home-user">Trang chủ</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a routerLink="/about">Giới thiệu</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a routerLink="/child-english">Chương trình học</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a routerLink="/child-schedule">Lịch khai giảng</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a routerLink="/contact">Liên hệ</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a routerLink="/login-user">Đăng nhập</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Những khóa học</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Tiếng Anh giao tiếp</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Khóa học TOEIC</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Khóa học IELTS</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Khóa học theo nhu cầu</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Khóa học cho thiếu nhi</a></li>
+              <li><i class="bx bx-chevron-right"></i><a routerLink="/child-english">Tiếng Anh thiếu nhi</a></li>
+              <li><i class="bx bx-chevron-right"></i><a routerLink="/young-english">Tiếng Anh thiếu niên</a></li>
+              <li><i class="bx bx-chevron-right"></i><a routerLink="/ielts">Luyện thi IELTS</a></li>
+              <li><i class="bx bx-chevron-right"></i><a routerLink="/toiec">TOEFL - TOEIC</a></li>
+              <li><i class="bx bx-chevron-right"></i><a routerLink="/basic-english">Tiếng Anh Căn Bản - Giao tiếp </a></li>
             </ul>
           </div>
-
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Gửi thông tin để được tư vấn chi tiết</h4>
             <p>Gửi thông tin của bạn cho chúng tôi để nhận được những tư vấn chi tiết về khóa học.</p>
