--- a/src/app/page_users/contact/contact.component.html
+++ b/src/app/page_users/contact/contact.component.html
@@ -24,8 +24,17 @@
               <li><a routerLink="/basic-english">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
             </ul>
           </li>
-          <li><a routerLink="/register-course">Đăng ký khóa học</a></li>
+          <li class="dropdown"><a routerLink="/child-schedule"><span>Lịch Khai Giảng</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a routerLink="/child-schedule">Tiếng Anh thiếu nhi</a></li>
+              <li><a routerLink="/young-schedule">Tiếng Anh thiếu niên</a></li>
+              <li><a routerLink="/ielts-schedule">Luyện thi IELTS</a></li>
+              <li><a routerLink="/toiec-schedule">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
+              <li><a routerLink="/basic-schedule">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
+            </ul>
+          </li>
           <li><a class="active" routerLink="/contact">Liên hệ</a></li>
+          <li><a routerLink="/login-user">Đăng nhập</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
