--- a/src/app/page_users/home-user/home-user.component.css
+++ b/src/app/page_users/home-user/home-user.component.css
@@ -1102,6 +1102,7 @@ section {
   font-weight: 700;
   text-align: center;
   margin-bottom: 20px;
+  margin-top: 30px;
 }
 
 .events .card-title a {
