--- a/src/app/page_users/about-user/about-user.component.html
+++ b/src/app/page_users/about-user/about-user.component.html
@@ -24,9 +24,18 @@
                 <li><a routerLink="/basic-english">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
               </ul>
             </li>
-            <li><a routerLink="/register-course">Đăng ký khóa học</a></li>
-            <li><a href="trainers.html">Liên hệ</a></li>
-          </ul>
+            <li class="dropdown"><a routerLink="/child-schedule"><span>Lịch Khai Giảng</span> <i class="bi bi-chevron-down"></i></a>
+              <ul>
+                <li><a routerLink="/child-schedule">Tiếng Anh thiếu nhi</a></li>
+                <li><a routerLink="/young-schedule">Tiếng Anh thiếu niên</a></li>
+                <li><a routerLink="/ielts-schedule">Luyện thi IELTS</a></li>
+                <li><a routerLink="/toiec-schedule">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
+                <li><a routerLink="/basic-schedule">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
+              </ul>
+            </li>
+            <li><a routerLink="/contact">Liên hệ</a></li>
+            <li><a routerLink="/login-user">Đăng nhập</a></li>
+            </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
       </div>
