--- a/src/app/page_users/register/register.component.html
+++ b/src/app/page_users/register/register.component.html
@@ -14,16 +14,33 @@
         <ul>
           <li><a  routerLink="/home-user">Trang chủ</a></li>
           <li><a routerLink="/about">Giới thiệu</a></li>
-          <li><a routerLink="/course-user">Các khóa học</a></li>
-          <li><a routerLink="/register-course">Đăng ký khóa học</a></li>
-          <li><a routerLink="/contact" >Liên hệ</a></li>
+          <li class="dropdown"><a routerLink="/child-english"><span>Chương trình học</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a routerLink="/child-english">Tiếng Anh thiếu nhi</a></li>
+              <li><a routerLink="/young-english">Tiếng Anh thiếu niên</a></li>
+              <li><a routerLink="/ielts">Luyện thi IELTS</a></li>
+              <li><a routerLink="/toiec">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
+              <li><a routerLink="/basic-english">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a routerLink="/child-schedule"><span>Lịch Khai Giảng</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a routerLink="/child-schedule">Tiếng Anh thiếu nhi</a></li>
+              <li><a routerLink="/young-schedule">Tiếng Anh thiếu niên</a></li>
+              <li><a routerLink="/ielts-schedule">Luyện thi IELTS</a></li>
+              <li><a routerLink="/toiec-schedule">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
+              <li><a routerLink="/basic-schedule">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
+            </ul>
+          </li>
+          <li><a routerLink="/contact">Liên hệ</a></li>
+          <li><a routerLink="/login-user">Đăng nhập</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
     </div>
   </header><!-- End Header -->
   <main id="main">
-    <section class="h-100 h-custom" style="background-color: #8fc4b7;">
+    <section class="h-100 h-custom" >
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-lg-8 col-xl-6">
