--- a/src/app/page_users/child-schedule/child-schedule.component.html
+++ b/src/app/page_users/child-schedule/child-schedule.component.html
@@ -69,7 +69,7 @@
                     <tr >
                         <th class="text-center"><span class="las la-sort"></span> CHƯƠNG TRÌNH</th>
                         <th class="text-center"><span class="las la-sort"></span> CẤP ĐỘ</th>
-                        <th class="text-center"><span class="las la-sort"></span> LỚP</th>
+                        <th class="text-center"><span class="las la-sort"></span> HỌC PHÍ</th>
                         <th class="text-center"><span class="las la-sort"></span> LỊCH HỌC</th>
                         <th class="text-center"><span class="las la-sort"></span> NGÀY KHAI GIẢNG DỰ KIẾN</th>
                       </tr>
