--- a/src/app/page_users/register-course/register-course.component.html
+++ b/src/app/page_users/register-course/register-course.component.html
@@ -52,7 +52,9 @@
                   <div class="form-outline mb-4">
                     <select [(ngModel)]="register.courseType" name="courseType" id="courseType" class="form-select" aria-label="Default select example">
                         <option value="1" disabled >-- Chọn khóa học --</option>
-                        <option *ngFor="let course of courses"  >{{course.courseType}}</option>
+                        <option>a</option>
+                        <option>b</option>
+                        <option>c</option>
                     </select>
                   </div>
                   <div class="form-outline mb-4">
