--- a/src/app/pages/ielts-english-ad/ielts-english-ad.component.html
+++ b/src/app/pages/ielts-english-ad/ielts-english-ad.component.html
@@ -4,7 +4,7 @@
 
   <main>
     <div class="page-header">
-      <h3>Quản lý chương trình Tiếng Anh thiếu nhi</h3>
+      <h3>Quản lý chương trình Tluyện thi Ielts</h3>
     </div>
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -76,7 +76,7 @@
 
                           </tr>
                       </thead>
-                      <tbody *ngFor="let course of courses">
+                      <!-- <tbody *ngFor="let course of courses">
                           <tr>
                               <td>{{course?.id}}</td>
                               <td>
@@ -85,9 +85,7 @@
                               <td>
                                   {{course?.start_time}}
                               </td>
-                              <!-- <td>
-                                  20/11/2023
-                              </td> -->
+
                               <td>
                                   {{course?.period}}
                               </td>
@@ -96,17 +94,17 @@
                               </td>
                               <td>
                               {{course?.price}}
-                             </td>
+                             </td> -->
                            <td>
                             <div class="actions">
                               <!-- <a> -->
-                                <button (click)="updateCourse(course.id)" class="btn" type="submit"><span class="las la-edit"></span></button>
+                                <!-- <button (click)="updateCourse(course.id)" class="btn" type="submit"><span class="las la-edit"></span></button> -->
                               <!-- </a> -->
-                              <button (click)="onDeleteCourse(course.id)" class="btn" ><span class="las la-trash-alt"></span></button>
+                              <!-- <button (click)="onDeleteCourse(course.id)" class="btn" ><span class="las la-trash-alt"></span></button> -->
                             </div>
                         </td>
-                          </tr>
-                      </tbody>
+                          <!-- </tr>
+                      </tbody> -->
                   </table>
               </div>
 
