--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -72,37 +72,41 @@
                               <th><span class="las la-sort"></span> HỌC PHÍ</th>
                               <th><span class="las la-sort"></span> LỊCH HỌC</th>
                               <th><span class="las la-sort"></span> NGÀY KHAI GIẢNG DỰ KIẾN</th>
+                              <th><span class="las la-sort"></span> THỜI LƯỢNG KHÓA</th>
                               <th><span class="las la-sort"></span> THAO TÁC</th>
 
                           </tr>
                       </thead>
                       <tbody *ngFor="let course of courses">
                           <tr>
-                              <td>{{course?.id}}</td>
+                              <td>{{course?.course_id}}</td>
                               <td>
-                                  {{course?.courseType}}
+                                  {{course?.program}}
                               </td>
                               <td>
-                                  {{course?.start_time}}
+                                  {{course?.level}}
                               </td>
                               <!-- <td>
                                   20/11/2023
                               </td> -->
                               <td>
-                                  {{course?.period}}
+                                  {{course?.price | currency:'VND'}}
                               </td>
                               <td>
-                                 {{course?.description}}
+                                 {{course?.schedule}}
                               </td>
                               <td>
-                              {{course?.price}}
+                              {{course?.openning}}
+                             </td>
+                             <td>
+                              {{course?.time}}
                              </td>
                            <td>
                             <div class="actions">
                               <!-- <a> -->
-                                <button (click)="updateCourse(course.id)" class="btn" type="submit"><span class="las la-edit"></span></button>
+                                <button (click)="updateCourse(course.course_id)" class="btn" type="submit"><span class="las la-edit"></span></button>
                               <!-- </a> -->
-                              <button (click)="onDeleteCourse(course.id)" class="btn" ><span class="las la-trash-alt"></span></button>
+                              <button (click)="onDeleteCourse(course.course_id)" class="btn" ><span class="las la-trash-alt"></span></button>
                             </div>
                         </td>
                           </tr>
