--- a/src/app/page_users/register/register.component.html
+++ b/src/app/page_users/register/register.component.html
@@ -62,7 +62,7 @@
                     <input [(ngModel)]="register.birthday" type="text" name="phone" id="phone" class="form-control" placeholder="Ngày sinh" />
                   </div>
                   <div class="form-outline mb-4">
-                    <input [(ngModel)]="register.email" type="email" name="email" id="email" class="form-control" placeholder="Email" />
+                    <input [(ngModel)]="register.username" type="email" name="username" id="username" class="form-control" placeholder="Email" />
                   </div>
                   <div class="form-outline mb-4">
                     <input [(ngModel)]="register.password" type="password" name="password" id="password" class="form-control" placeholder="Password" />
