--- a/src/app/pages/young-english-ad/young-english-ad.component.html
+++ b/src/app/pages/young-english-ad/young-english-ad.component.html
@@ -6,41 +6,41 @@
     <div class="page-header">
       <h3>Quản lý chương trình Tiếng Anh thiếu niên</h3>
     </div>
-      <nav id="navbar" class="navbar order-last order-lg-0">
-        <ul>
-          <li class="dropdown"><a routerLink="/course"><span>Tiếng Anh thiếu nhi</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/course">Quản lý lịch học</a></li>
-              <li><a routerLink="/young-english">Danh sách đăng ký đăng ký</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a routerLink="/young-english-ad"><span>Tiếng Anh thiếu niên</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/young-english-ad">Quản lý lịch học</a></li>
-              <li><a routerLink="/young-english">Danh sách đăng ký đăng ký</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a routerLink="/ielts-english-ad"><span>Luyện thi IELTS</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/ielts-english-ad">Quản lý lịch học</a></li>
-              <li><a routerLink="/young-english">Danh sách đăng ký đăng ký</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a routerLink="/toeic-english-ad"><span>Luyện thi TOEFL-TOEIC</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/toeic-english-ad">Quản lý lịch học</a></li>
-              <li><a routerLink="/young-english">Danh sách đăng ký đăng ký</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a routerLink="/basic-english-ad"><span>Giao tiếp - Căn Bản</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/basic-english-ad">Quản lý lịch học</a></li>
-              <li><a routerLink="/young-english">Danh sách đăng ký đăng ký</a></li>
-            </ul>
-          </li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+    <nav id="navbar" class="navbar order-last order-lg-0">
+      <ul>
+        <li class="dropdown"><a routerLink="/course"><span>Tiếng Anh thiếu nhi</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a routerLink="/course">Quản lý lịch học</a></li>
+            <li><a routerLink="/child-english-ad-list">Danh sách đăng ký khóa học</a></li>
+          </ul>
+        </li>
+        <li class="dropdown"><a routerLink="/young-english-ad"><span>Tiếng Anh thiếu niên</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a routerLink="/young-english-ad">Quản lý lịch học</a></li>
+            <li><a routerLink="/young-english-ad-list">Danh sách đăng ký khóa học</a></li>
+          </ul>
+        </li>
+        <li class="dropdown"><a routerLink="/ielts-english-ad"><span>Luyện thi IELTS</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a routerLink="/ielts-english-ad">Quản lý lịch học</a></li>
+            <li><a routerLink="/ielts-english-ad-list">Danh sách đăng ký khóa học</a></li>
+          </ul>
+        </li>
+        <li class="dropdown"><a routerLink="/toeic-english-ad"><span>Luyện thi TOEFL-TOEIC</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a routerLink="/toeic-english-ad">Quản lý lịch học</a></li>
+            <li><a routerLink="/toeic-english-ad-list">Danh sách đăng ký khóa học</a></li>
+          </ul>
+        </li>
+        <li class="dropdown"><a routerLink="/basic-english-ad"><span>Giao tiếp - Căn Bản</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a routerLink="/basic-english-ad">Quản lý lịch học</a></li>
+            <li><a routerLink="/basic-english-ad-list">Danh sách đăng ký khóa học</a></li>
+          </ul>
+        </li>
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav><!-- .navbar -->
       <div class="page-content">
 
           <div class="records table-responsive">
