--- a/src/app/page_users/child-schedule/child-schedule.component.html
+++ b/src/app/page_users/child-schedule/child-schedule.component.html
@@ -67,31 +67,46 @@
               <table width="100%" >
                 <thead >
                     <tr >
-                        <th class="text-center"><span class="las la-sort"></span> CHƯƠNG TRÌNH</th>
-                        <th class="text-center"><span class="las la-sort"></span> CẤP ĐỘ</th>
-                        <th class="text-center"><span class="las la-sort"></span> HỌC PHÍ</th>
-                        <th class="text-center"><span class="las la-sort"></span> LỊCH HỌC</th>
-                        <th class="text-center"><span class="las la-sort"></span> NGÀY KHAI GIẢNG DỰ KIẾN</th>
-                      </tr>
-                </thead>
-                <!-- <tbody *ngFor="let course of courses">
+                      <th><span class="las la-sort"></span> CHƯƠNG TRÌNH</th>
+                      <th><span class="las la-sort"></span> CẤP ĐỘ</th>
+                      <th><span class="las la-sort"></span> HỌC PHÍ</th>
+                      <th><span class="las la-sort"></span> LỊCH HỌC</th>
+                      <th><span class="las la-sort"></span> NGÀY KHAI GIẢNG</th>
+                      <th><span class="las la-sort"></span> THỜI LƯỢNG KHÓA</th>
+                      <th><span class="las la-sort"></span> ĐĂNG KÝ</th>
+            </thead>
+                <tbody *ngFor="let course of courses">
                   <tr>
-                     <td>{{course?.id}}</td>
-                     <td>{{course?.courseType}}</td>
-                     <td>{{course?.start_time}}</td>
-                     <td>{{course?.period}}</td>
-                     <td>{{course?.description}}</td>
-                     <td>{{course?.price}}</td>
-                     <td>{{course?.level}}</td>
-                  </tr>
-                </tbody> -->
+                      <!-- <td>{{course?.course_id}}</td> -->
+                      <td>
+                          {{course?.program}}
+                      </td>
+                      <td>
+                          {{course?.level}}
+                      </td>
+                      <td>
+                          {{course?.price | currency:'VND'}}
+                      </td>
+                      <td>
+                        {{course?.schedule}}
+                      </td>
+                      <td>
+                      {{course?.openning}}
+                    </td>
+                    <td>
+                      {{course?.time}}
+                    </td>
+                    <td>
+                      <a class="text-success" (click)="updateCourse(course.course_id)">Đăng ký ngay!</a>
+                    </td>
+                  </tbody>
               </table>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="h-100 h-custom">
+    <!-- <section class="h-100 h-custom">
         <div class="container py-5 h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-lg-8 col-xl-6">
@@ -127,7 +142,7 @@
             </div>
           </div>
       </div>
-    </section>
+    </section> -->
   </main>
   <app-footer></app-footer>
   </body>
