--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -43,12 +43,12 @@
                               <th><span class="las la-sort"></span> THAO TÁC</th>
                           </tr>
                       </thead>
-                      <tbody *ngFor="let register of register ">
+                      <!-- <tbody *ngFor="let register of register ">
                           <tr>
                               <td>{{register.id}}</td>
                               <td>
                                   <div class="client">
-                                     <!-- <div class="client-img bg-img" style="background-image: url(../../../assets/img/3.jpeg)"></div> -->
+                                      <div class="client-img bg-img" style="background-image: url(../../../assets/img/3.jpeg)"></div> 
                                       <div class="client-info">
                                           <h4>{{register.userName}}</h4>
                                           <small>{{register.email}}</small>
@@ -76,7 +76,7 @@
                                   </div>
                               </td>
                           </tr>
-                      </tbody>
+                      </tbody> -->
                   </table>
               </div>
 
