--- a/src/app/pages/update-teacher/update-teacher.component.html
+++ b/src/app/pages/update-teacher/update-teacher.component.html
@@ -47,6 +47,11 @@
                                   <td>
                                     <input type="text" [(ngModel)]="teacher.address" name="address" id="address" >
                                   </td>
+
+                              <td><span>Chương trình dạy</span></td>
+                                  <td>
+                                    <input type="text" [(ngModel)]="teacher.teachProgram" name="teachProgram" id="teachProgram" >
+                                  </td>
                               </div>
                               </table>
                             </div>
