--- a/src/app/pages/add-teacher/add-teacher.component.html
+++ b/src/app/pages/add-teacher/add-teacher.component.html
@@ -54,17 +54,13 @@
                         <div class="record-header">
                           <div class="add">
                             <table>
-                              <div  class="td_select">
-                              <!-- <td><span>Nội dung</span></td>
-                              <td><textarea name="" id="" cols="30" rows="2"></textarea></td>-->
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
+                              <div style="
+                              position: relative;
+                              left: 25px;">
+                                <td><span>Chương trình dạy</span></td>
+                                <td>
+                                  <input type="text" [(ngModel)]="teacher.teachProgram" name="teachProgram" id="teachProgram" >
+                                </td>
                               <td><button  type="submit">Thêm</button></td>
                             </div>
                           </table>
